# libuvcpp

./: CMakeLists.txt  LICENSE  README.md  README.zh.md  RELEASE.md
.github/workflows/: ci.yml
cmake/: uvcppConfig.cmake.in
src/: uvcpp.h
src/handle/: uvcpp_async.cpp  uvcpp_async.h  uvcpp_check.cpp  uvcpp_check.h  uvcpp_fs_event.cpp  uvcpp_fs_event.h  uvcpp_fs_poll.cpp  uvcpp_fs_poll.h  uvcpp_handle.cpp  uvcpp_handle.h  uvcpp_idle.cpp  uvcpp_idle.h  uvcpp_loop.cpp  uvcpp_loop.h  uvcpp_pipe.cpp  uvcpp_pipe.h  uvcpp_poll.cpp  uvcpp_poll.h  uvcpp_prepare.cpp  uvcpp_prepare.h  uvcpp_process.cpp  uvcpp_process.h  uvcpp_signal.cpp  uvcpp_signal.h  uvcpp_stream.cpp  uvcpp_stream.h  uvcpp_tcp.cpp  uvcpp_tcp.h  uvcpp_timer.cpp  uvcpp_timer.h  uvcpp_tty.cpp  uvcpp_tty.h  uvcpp_udp.cpp  uvcpp_udp.h
src/req/: uvcpp_connect.cpp  uvcpp_connect.h  uvcpp_fs.cpp  uvcpp_fs.h  uvcpp_getaddrinfo.cpp  uvcpp_getaddrinfo.h  uvcpp_getnameinfo.cpp  uvcpp_getnameinfo.h  uvcpp_random.cpp  uvcpp_random.h  uvcpp_req.cpp  uvcpp_req.h  uvcpp_shutdown.cpp  uvcpp_shutdown.h  uvcpp_udp_send.cpp  uvcpp_udp_send.h  uvcpp_work.cpp  uvcpp_work.h  uvcpp_write.cpp  uvcpp_write.h
src/uvcpp/: uv_alloc.h  uv_buf.h  uv_define.h  uvcpp_alloc.h  uvcpp_barrier.cpp  uvcpp_barrier.h  uvcpp_buf.cpp  uvcpp_buf.h  uvcpp_cpu_info.cpp  uvcpp_cpu_info.h  uvcpp_define.h  uvcpp_dir.cpp  uvcpp_dir.h  uvcpp_dirent.cpp  uvcpp_dirent.h  uvcpp_env_item.cpp  uvcpp_env_item.h  uvcpp_export.h  uvcpp_group.cpp  uvcpp_group.h  uvcpp_interface_address.cpp  uvcpp_interface_address.h  uvcpp_metrics.cpp  uvcpp_metrics.h  uvcpp_passwd.cpp  uvcpp_passwd.h  uvcpp_rwlock.cpp  uvcpp_rwlock.h  uvcpp_statfs.cpp  uvcpp_statfs.h  uvcpp_thread.cpp  uvcpp_thread.h  uvcpp_utsname.cpp  uvcpp_utsname.h  uvcpp_uv_define.h  uvcpp_version.h
tests/: CMakeLists.txt
tests/functional/: CMakeLists.txt  async_func.cpp  check_func.cpp  fs_func.cpp  idle_func.cpp  pipe_func.cpp  poll_func.cpp  prepare_func.cpp  process_func.cpp  tcp_func.cpp  tty_func.cpp  udp_func.cpp  udp_func.cpp.replacement
tests/unit/: CMakeLists.txt  cleanup_marker.txt  delete_placeholder.txt  handle_unit.cpp  req_unit.cpp  uvcpp_unit.cpp
